# esy

./: esy.json  esy.opam
esy-install/: SolutionLock.re  dune
esy-lib/: NodeResolution.re  dune
esy-nix/: README.md  dune  main.ml
esy-package-config/: dune
esy-project/: EsyRuntime.re  Project.re  Project.rei  ProjectConfig.re  ProjectConfig.rei  dune
esy-shell-expansion/: dune
nix/: default.nix  opam-selection.nix  opam-selection.nix.gup  wrangle.json
test-e2e/esy-install/: add.test.js
