opam-version: "2.0"
depends: [
  "angstrom"
  "bos" { >= "0.2.0" }
  "cmdliner"
  "cudf" { >= "0.9" }
  "dose3" { >= "5.0.1" }
  "dune" { >= "1.11.4" }
  "fmt" { >= "0.8.8" }
  "fpath" { >= "0.7.2" }
  "lambda-term" { >= "2.0.2" }
  "logs" { >= "0.7.0" }
  "lwt" { >= "4.4.0" & < "5.0.0" }
  "lwt_ppx" { >= "1.2.4" }
  "menhir" { >= "20190924" }
  "opam-core" { >= "2.0.5" }
  "opam-file-format" { >= "2.0.0" }
  "opam-format" { >= "2.0.5" }
  "opam-state" { >= "2.0.5" }
  "ppx_deriving" { >= "4.4" }
  "ppx_deriving_yojson" { >= "3.5.1" }
  "ppx_expect" { >= "v0.13.0" }
  "ppx_inline_test" { >= "v0.13.0" }
  "ppx_let" { >= "v0.13.0" }
  "ppx_sexp_conv" { >= "v0.13.0" }
  "re" { >= "1.9.0" }
  "reason" { >= "3.5.2" }
  "yojson" { >= "1.7.0" }
  # "@reason-native/rely": "3.1.0",
  # "ocaml": "4.08.1000"
]
depexts: [
  ["nodejs-12_x"] {os-distribution="nixos"}
]
build: [
  [ "dune" "build" "-p" "esy" ]
]
